# efira

./: Cargo.toml  run_qemu_amd64.sh
ovmf/: OVMF_VARS.fd
src/: main.rs
src/helper/: fmt.rs  mod.rs
